reversing the dark mode to old version because chrome have a bug

--- a/themes/diegoeis-v3/static/all.css
+++ b/themes/diegoeis-v3/static/all.css
@@ -8,9 +8,9 @@
 body {
   font-size: 16px;
   padding: 0 25px;
-  text-rendering: optimizeLegibility
-  -moz-osx-font-smoothing: grayscale
-  -moz-font-feature-settings: "liga" on
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on;
 }
 
 :root {
@@ -561,22 +561,23 @@ img {
 /**********
 **** DARK MODE
 **********/
-
-/*.eis-blend {
-  width: 1rem;
-  height: 1rem;
+/*
+.eis-blend {
+  width: 3rem;
+  height: 3rem;
   position: fixed;
-  top: -20px;
-  right: -20px;
+  top: 0px;
+  right: 0px;
   border-radius: 50%;
   pointer-events: none;
   background: rgba(255, 255, 255, .9);
   transition: all .8s ease;
   mix-blend-mode: difference;
+  outline: 1px solid red;
 }
 
 [data-darkmode="true"] .eis-blend {
-  transform: scale(400);
+  transform: scale(50);
 }
 
 [data-darkmode="true"] .eis-list-post li a:hover {
@@ -591,8 +592,8 @@ img {
 [data-darkmode="true"] a:hover {
   box-shadow: inset 0 -2px 0 var(--yellowContrast);
   color: black;
-}
-*/
+}*/
+
 #eis-dark-btn {
   cursor: pointer;
   font: .7rem var(--sans-serif);
@@ -675,4 +676,5 @@ img {
 [data-darkmode="true"] .eis-article header h1:after {
   background: #fff;
 }
+
 
